Adjust width of main card to avoid ugly text wrap

--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -1,5 +1,5 @@
 .landing-page {
-  width: 720px;
+  width: 740px;
 }
 
 .form-section {
